--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,21 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+	padding: 50px;
+	background-color: #F9B7B7;
+	font-family: Verdana;
 }
 
-a {
-  color: #00B7FF;
+.button {
+	padding: 5px;
+	background-color: #dcdcdc;
+	border: 2px solid black;
+	color: #000;
+	text-decoration: none;
+}
+
+.button:hover {
+	background-color: white;
+}
+
+a:visited {
+	color: #971155;
 }
